# fest

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  clippy.toml  deny.toml  pyproject.toml  release-please-config.json  release-plz.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml  release-plz.yml  release.yml
bench/: compare.sh
benches/: coverage.rs  mutation.rs
docs/: benchmark-2026-03-06.md
docs/plans/: 2026-03-04-architecture-design.md  2026-03-05-cosmic-ray-parity-design.md  2026-03-05-persistent-workers-design.md
docs/superpowers/plans/: 2026-05-10-plugin-plan-g.md
docs/superpowers/specs/: 2026-03-14-plugin-reference-fixup-design.md
src/: cli.rs  config.rs  coverage.rs  error.rs  init.rs  lib.rs  main.rs  mutation.rs  plugin.rs  plugin_index.rs  progress.rs  python.rs  report.rs  runner.rs  session.rs  signal.rs
src/config/: types.rs
src/coverage/: json_parser.rs  sqlite_reader.rs
src/mutation/: builtin.rs  diff.rs  mutant.rs  mutator.rs  seed.rs
src/mutation/builtin/: arithmetic.rs  augmented_assign.rs  bitwise.rs  boolean.rs  break_continue.rs  comparison.rs  constant.rs  exception.rs  negate_condition.rs  remove_decorator.rs  remove_super.rs  return_value.rs  statement_deletion.rs  unary.rs  variable_insert.rs  variable_replace.rs  zero_iteration.rs
src/plugin/: _fest_plugin.py
src/progress/: event.rs  render.rs  reporter.rs  style.rs
src/report/: html.rs  json.rs  text.rs  types.rs
src/runner/: pytest_plugin.rs  subprocess.rs
tests/fixtures/from_imports/src/: calc.py  consumer.py
tests/fixtures/from_imports/tests/: test_calc.py
tests/fixtures/nested_closures/src/: factory.py
tests/fixtures/nested_closures/tests/: test_factory.py
tests/fixtures/registry_classes/: pyproject.toml
tests/fixtures/registry_classes/src/: registry.py
tests/fixtures/registry_classes/tests/: test_registry.py
tests/plugin/: conftest.py  test_mutation_applier.py  test_patch_journal.py  test_reverse_import_index.py  test_thread_detection.py
