[package]
name = "fest"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A fast mutation-testing tool for Python"
keywords = ["mutation-testing", "python", "testing"]
categories = ["development-tools::testing"]
repository = "https://github.com/sakost/fest"
homepage = "https://github.com/sakost/fest"
rust-version = "1.93"
publish = false

[lib]
name = "fest"
path = "src/lib.rs"

[[bin]]
name = "fest"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_qualifications = "deny"
elided_lifetimes_in_paths = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_results = "deny"
variant_size_differences = "warn"
let_underscore_drop = "deny"
meta_variable_misuse = "deny"
non_ascii_idents = "forbid"

[lints.clippy]
# Lint groups — all elevated to deny
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Restrictions — deny level for maximum strictness
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
clone_on_ref_ptr = "deny"
empty_structs_with_brackets = "deny"
exit = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
if_then_some_else_none = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
mixed_read_write_in_expression = "deny"
mod_module_files = "deny"
mutex_atomic = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
self_named_module_files = "allow"
str_to_string = "deny"
string_add = "deny"
implicit_clone = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_self_imports = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"

# Additional restrictions
alloc_instead_of_core = "deny"
allow_attributes_without_reason = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
create_dir = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "deny"
default_union_representation = "deny"
deref_by_slicing = "deny"
empty_drop = "deny"
error_impl_error = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
impl_trait_in_params = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "deny"
integer_division = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
map_err_ignore = "deny"
missing_asserts_for_indexing = "deny"
missing_docs_in_private_items = "deny"
missing_inline_in_public_items = "warn"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
needless_raw_strings = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pattern_type_mismatch = "deny"
pub_without_shorthand = "deny"
redundant_closure_for_method_calls = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
semicolon_outside_block = "deny"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
single_char_lifetime_names = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
unwrap_in_result = "deny"
use_debug = "deny"
wildcard_dependencies = "deny"

[package.metadata.cargo-machete]
ignored = ["serde", "thiserror"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16"
glob = "0.3.3"
indicatif = "0.18.4"
rayon = "1.11.0"
rusqlite = { version = "0.38", features = ["bundled"] }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.11.6", version = "0.0.0" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.11.6", version = "0.0.0" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.11.6", version = "0.0.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tempfile = "3.26.0"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.3"
ahash = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mutation"
harness = false

[[bench]]
name = "coverage"
harness = false
