[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fest-mutate"
dynamic = ["version"]
description = "An extremely fast mutation testing tool for Python"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.9"
keywords = ["mutation-testing", "testing", "pytest", "quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/sakost/fest"
Issues = "https://github.com/sakost/fest/issues"

[tool.maturin]
bindings = "bin"
strip = true
